--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ cryptography==2.8
 decorator==4.4.1
 Django==2.2
 django-appconf==1.0.3
-django-authority==0.14
 django-autoslug==1.9.6
 django-bootstrap4==1.1.1
 django-ckeditor==5.8.0
 django-countries==5.5
+django-crispy-forms==1.8.1
 django-cryptography==0.4
 django-extensions==2.2.6
 django-grappelli==2.13.3
@@ -29,6 +29,7 @@ django-qr-code==1.1.0
 django-registration-redux==2.6
 django-simple-history==2.8.0
 easy-thumbnails==2.7
+feedparser==5.2.1
 ipython==7.10.2
 ipython-genutils==0.2.0
 jedi==0.15.1
@@ -38,7 +39,6 @@ phonenumbers==8.11.1
 pickleshare==0.7.5
 Pillow==6.2.1
 prompt-toolkit==3.0.2
-psycopg2==2.8.4
 ptyprocess==0.6.0
 pycparser==2.19
 Pygments==2.5.2
