template for login user

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-q==1.1.0
 django-qr-code==1.1.0
 django-registration-redux==2.6
 django-simple-history==2.8.0
+django-widget-tweaks==1.4.5
 easy-thumbnails==2.7
 feedparser==5.2.1
 ipython==7.10.2
