--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,10 @@ django-bootstrap4==1.1.1
 django-ckeditor==5.8.0
 django-countries==5.5
 django-crispy-forms==1.8.1
-django-cryptography==0.4
+django-cryptography==1.0
+django-datatable==0.3.1
 django-extensions==2.2.6
-django-grappelli==2.13.3
+django-grappelli==2.14.1
 django-js-asset==1.2.2
 django-jsonfield==1.4.0
 django-mptt==0.11.0
@@ -26,7 +27,7 @@ django-phonenumber-field==4.0.0
 django-picklefield==2.1.1
 django-q==1.1.0
 django-qr-code==1.1.0
-django-registration-redux==2.6
+django-registration-redux==2.7
 django-simple-history==2.8.0
 django-widget-tweaks==1.4.5
 easy-thumbnails==2.7
